--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div class="calculator">
             <div class="output">
-                <div data-previousNumberText class="previous"></div>
-                <div data-currentNumberText class="current"></div>
+                <div data-previousNumberText class="previous">12 +</div>
+                <div data-currentNumberText class="current">23</div>
             </div>
-            <button>AC</button>
-            <button>DEL</button>
+            <button class="allClear">AC</button>
+            <button class="delete">DEL</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
