--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <div class="container">
         <div class="calculator">
             <div class="output">
-                <div data-previousNumberText class="previous">12 +</div>
-                <div data-currentNumberText class="current">23</div>
+                <div data-previousNumberText class="previous"></div>
+                <div data-currentNumberText class="current"></div>
             </div>
-            <button class="allClear">AC</button>
-            <button class="delete">DEL</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>/</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>*</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
-            <button>.</button>
-            <button>0</button>
-            <button>=</button>
-            <button>-</button>
+            <button data-allClear class="allClear">AC</button>
+            <button data-delete class="delete">DEL</button>
+            <button data-numbers>7</button>
+            <button data-numbers>8</button>
+            <button data-numbers>9</button>
+            <button data-operations>/</button>
+            <button data-numbers>4</button>
+            <button data-numbers>5</button>
+            <button data-numbers>6</button>
+            <button data-operations>*</button>
+            <button data-numbers>1</button>
+            <button data-numbers>2</button>
+            <button data-numbers>3</button>
+            <button data-operations>+</button>
+            <button data-numbers>.</button>
+            <button data-numbers>0</button>
+            <button data-equals>=</button>
+            <button data-operations>-</button>
         </div>
     </div>
 
