--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <button data-equals>=</button>
             <button data-operations>-</button>
         </div>
+
+
+        <footer><p class="footer-title"><a href="https://github.com/Abheekrishna" target="_blank">Abhee</a> | Copyright &#169; | <span id="year"></span></p></footer>
     </div>
 
 
