--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/03100ec21e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
@@ -8,6 +9,8 @@
 </head>
 <body>
     <div class="container">
+        <p class="darkmodeicon"><i id="darkmode" class="fa-solid fa-circle-half-stroke"></i></p>
+        
         <div class="calculator">
             <div class="output">
                 <div data-previousNumberText class="previous"></div>
