Added favicon and meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <script src="https://kit.fontawesome.com/03100ec21e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Calculator | Abhee</title>
+    <meta name="description" content="Calculator with functionality of Addition, Subtraction, Multiplication and Division.">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
