--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | Abhee</title>
     <meta name="description" content="Calculator with functionality of Addition, Subtraction, Multiplication and Division.">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
